# segway-connect-system-source-box-enterprise

./: .gitignore  .releaserc.json  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci-main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
chart/templates/tests/: test-connection.yaml
etc/syslog-ng/conf.d/plugin/sources/: plugin.conf
python/: pyproject.toml
python/box_enterprise_source/: __init__.py
python/segway_connect_system_source_box_enterprise/: __init__.py  demo.py
